--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   publish = "dist"
 
 [dev]
-  command = "npm run dev"
+  command = "npm run start"
   framework = "#custom"
   port = 8888
   targetPort = 3000
